# lufa_autotools

./: .gitignore  Makefile.am  Makefile.in  README.txt  aclocal.m4  configure  configure.ac  configure.scan
LUFA/: Makefile.am  Makefile.in
LUFA/Common/: Makefile.am  Makefile.in
LUFA/Drivers/: Makefile.am  Makefile.in
LUFA/Drivers/USB/: Makefile.am  Makefile.in  USB.h
LUFA/Drivers/USB/Class/: Makefile.am  Makefile.in
LUFA/Drivers/USB/Class/Common/: AndroidAccessoryClassCommon.h  AudioClassCommon.h  CDCClassCommon.h  HIDClassCommon.h  HIDParser.h  MIDIClassCommon.h  Makefile.am  Makefile.in  MassStorageClassCommon.h  PrinterClassCommon.h  RNDISClassCommon.h  StillImageClassCommon.h
LUFA/Drivers/USB/Class/Device/: AudioClassDevice.h  CDCClassDevice.h  HIDClassDevice.h  MIDIClassDevice.h  Makefile.am  Makefile.in  MassStorageClassDevice.h  PrinterClassDevice.h  RNDISClassDevice.h
LUFA/Drivers/USB/Core/: ConfigDescriptors.h  Device.h  DeviceStandardReq.h  Endpoint.h  EndpointStream.h  Events.h  Host.h  HostStandardReq.h  Makefile.am  Makefile.in  OTG.h  Pipe.h  PipeStream.h  StdDescriptors.h  StdRequestType.h  USBController.h  USBInterrupt.h  USBMode.h  USBTask.h
LUFA/Drivers/USB/Core/AVR8/: Device_AVR8.c  Device_AVR8.h  EndpointStream_AVR8.c  EndpointStream_AVR8.h  Endpoint_AVR8.c  Endpoint_AVR8.h  Host_AVR8.c  Host_AVR8.h  Makefile.am  Makefile.in  OTG_AVR8.h  PipeStream_AVR8.c  PipeStream_AVR8.h  Pipe_AVR8.c  Pipe_AVR8.h  USBController_AVR8.c  USBController_AVR8.h  USBInterrupt_AVR8.c  USBInterrupt_AVR8.h
LUFA/Platform/: Makefile.am  Makefile.in  Platform.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
