AC_INIT(lufa_library, 1.0, me@mail.com)
AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE([foreign subdir-objects])
AC_CONFIG_HEADERS([conf.h])

LT_INIT
AC_PROG_CC
AC_PROG_CC_STDC

AC_CONFIG_SRCDIR(LUFA/Drivers/Board/Board.h)



AC_OUTPUT(Makefile LUFA/Drivers/USB/Core/Makefile LUFA/Drivers/USB/Core/AVR8/Makefile)
