SUBDIRS = Device Common

classincludedir = $(includedir)/Class

classinclude_HEADERS = \
											 AndroidAccessoryClass.h \
											 AudioClass.h \
											 CDCClass.h \
											 HIDClass.h \
											 MassStorageClass.h \
											 MIDIClass.h \
											 PrinterClass.h \
											 RNDISClass.h \
											 StillImageClass.h

