noinst_LTLIBRARIES = libdevice.la
libdevice_la_SOURCES = AudioClassDevice.c \
											 CDCClassDevice.c \
											 HIDClassDevice.c \
											 MassStorageClassDevice.c \
											 MIDIClassDevice.c \
											 PrinterClassDevice.c \
											 RNDISClassDevice.c


libdevice_la_CPPFLAGS = -I$(top_srcdir)/src -std=c99 
