noinst_LTLIBRARIES = libavr8.la
libavr8_la_SOURCES = Device_AVR8.c \
										 Endpoint_AVR8.c \
										 EndpointStream_AVR8.c \
										 Host_AVR8.c \
										 Pipe_AVR8.c \
										 PipeStream_AVR8.c \
										 USBController_AVR8.c \
										 USBInterrupt_AVR8.c


libavr8_la_CPPFLAGS = -I$(top_srcdir)/src -std=c99 
